@@ -1,0 +1,4 @@
+package data.views.mainMenu
+
+class MainMenuRepository {
+}
