@@ -1,0 +1,4 @@
+package presentation.screens.dayPartMenu
+
+class DayPartMenuViewModel {
+}
